# fmbcb-rds-multi-scan

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: shellcheck.yml
config/: defaults.env.sample
docs/: INSTALL.md  TROUBLESHOOTING.md
examples/: quickstart.sh
examples/systemd/: fmbcb-rds-multi-scan.service.example
src/fmbcb_rds_multi_scan/: __init__.py  __main__.py  check_env.py  scanner.py
