[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fmbcb-rds-multi-scan"
version = "0.1.0"
description = "FM broadcast-band RDS multi-scanner using rx_sdr, csdr, and redsea"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Andy Z" }
]
dependencies = [
  "requests>=2.31",
]
keywords = ["sdr", "rds", "fm", "broadcast", "redsea", "csdr"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Telecommunications Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Communications :: Ham Radio",
]

[project.scripts]
fmbcb-rds-multi-scan = "fmbcb_rds_multi_scan.scanner:main"
fmbcb-rds-env-check = "fmbcb_rds_multi_scan.check_env:main"

[tool.setuptools.packages.find]
where = ["src"]
